--- a/information.html
+++ b/information.html
@@ -30,7 +30,9 @@
         <div class="form-group" id="emailCodeField">
             <label for="exampleInputEmailCode">Email Code</label>
             <div class="input-group">
-                <input type="text" class="form-control" id="exampleInputEmailCode" placeholder="Email Code">
+                <div class="col-xs-5">
+                    <input type="text" class="form-control" id="exampleInputEmailCode" placeholder="Email Code">
+                </div>
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="button" id="sendEmailCode">Send Email Code</button>
                 </span>
