--- a/搜索.html
+++ b/搜索.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FoodExchange Platform - Search Results</title>
 <!--    <link rel="stylesheet" href="css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="css/article.css">
+    <link rel="stylesheet" href="css/information.css"> <!-- 引用独立的CSS文件 -->
+<!--    <link rel="stylesheet" href="css/article.css">-->
     <style>
         body {
             display: flex;
