--- a/header.html
+++ b/header.html
@@ -1,43 +1,31 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.css">
-</head>
-
-<body>
 <nav class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="#">Notes</a></li>
-                <li><a href="搜索.html">Search</a></li>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="font-size: large">
+            <ul class="nav navbar-nav" >
+                <li><a href="首页.html" >Home</a></li>
+                <li><a href="笔记展示.html" >Notes</a></li>
+                <li><a href="搜索.html" >Search</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="登录.html">login</a></li>
-                <li><a href="#">Publish</a></li>
+                <li><a href="登录.html" >login</a></li>
+                <li><a href="发布.html" >Publish</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <div class="form-group", id="searchField">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control " placeholder="Search">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default ">Submit</button>
             </form>
         </div>
     </div>
 </nav>
-</body>
-</html>
