--- a/登录.html
+++ b/登录.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FoodExchange Platform</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/box.css"> <!-- 引用独立的CSS文件 -->
+    <link rel="stylesheet" href="css/information.css"> <!-- 引用独立的CSS文件 -->
 </head>
 
 <body>
@@ -15,7 +15,26 @@
     <h1 class="text-center">Welcome to login</h1>
     <div class="form-container">
         <form id="loginForm">
-            <div id="form-placeholder"></div>
+            <div class="form-group" id="nameOrPhoneField">
+                <label for="exampleID">UserName or Phone Number</label>
+                <input type="text" class="form-control" id="exampleID" placeholder="UserName or Phone Number">
+            </div>
+            <div class="form-group" id="passwordField1">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" autocomplete="current-password">
+            </div>
+            <div class="form-group" id="emailCodeField">
+                <label for="exampleInputEmailCode">Email Code</label>
+
+                <div class="input-group">
+                    <div class="col-lg-7 " style="padding-left: 0px;">
+                        <input type="text" class="form-control" id="exampleInputEmailCode" placeholder="Email Code">
+                    </div>
+                    <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" id="sendEmailCode">Get Email Code</button>
+                </span>
+                </div>
+            </div>
             <div class="checkbox">
                 <a href="注册.html" class="forgot-password">Register?</a>
                 <a href="忘记密码.html" class="forgot-password">Forgot Password?</a>
@@ -29,17 +48,12 @@
     <script src="js/bootstrap.js"></script>
     <script src="axios/axios.min.js"></script>
     <script>
-        window.enabledFields = ['nameOrPhoneField', 'passwordField1'];
         $(document).ready(function () {
             $("#header-placeholder").load("header.html");
-            $("#form-placeholder").load("form.html");
-            $.getScript("js/form.js");
-            $.getScript("js/loginSubmit.js");
-            $.getScript("js/sendEmailCode.js");
         });
-
     </script>
     <script src="js/loginSubmit.js"></script>
+    <script src="js/sendEmailCode.js"></script>
 </body>
 
 </html>
