--- a/笔记展示.html
+++ b/笔记展示.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Similar Post</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/box.css">
+    <link rel="stylesheet" href="css/information.css">
     <link rel="stylesheet" href="css/comments.css">
     <link rel="stylesheet" href="css/article.css">
-    <link rel="stylesheet" href="css/box.css">
+    <link rel="stylesheet" href="css/information.css">
 </head>
 
 <body>
