--- a/注册.html
+++ b/注册.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FoodExchange Platform</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/information.css"> <!-- 引用独立的CSS文件 -->
+    <link rel="stylesheet" href="css/information.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
     </div>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="axios/axios.min.js"></script>
     <script>
         $(document).ready(function(){
             $("#header-placeholder").load("header.html");
