--- a/登录.html
+++ b/登录.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FoodExchange Platform</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/information.css"> <!-- 引用独立的CSS文件 -->
+    <link rel="stylesheet" href="css/information.css">
 </head>
 
 <body>
