--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <style>
         body {
             display: flex;
@@ -47,12 +48,13 @@
 </head>
 <body>
 
-<div class="search-box">
-    <input type="text" class="search-input" placeholder="Search food or notes">
-    <button class="search-button">
-        <span>&#128269;</span> <!-- Unicode字符表示的搜索图标 -->
-    </button>
-</div>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+    <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+</button>
+
+<button type="button" class="btn btn-default btn-lg">
+    <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
+</button>
 
 </body>
 </html>
