--- a/flashPhotos.html
+++ b/flashPhotos.html
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner" style="width: 1200px; margin: auto">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -9,37 +9,37 @@
         <div class="carousel-inner">
             <div class="item active carousel-item" style="background-image: url(image/1.jpg);">
                 <div class="container">
-                    <h1>Welcome to FoodExchange</h1>
-                    <p>The ultimate platform revolutionizing the way you experience food. Whether you’re a culinary
+                    <div class="titile">Welcome to FoodExchange</div>
+                    <div class="content">The ultimate platform revolutionizing the way you experience food. Whether you’re a culinary
                         enthusiast, a home cook, or a professional chef, FoodExchange offers an unparalleled
-                        opportunity to explore, share, and delight in a world of flavors.</p>
+                        opportunity to explore, share, and delight in a world of flavors.</div>
                     <a href="注册.html" class="btn btn-lg btn-primary">Join Us</a>
                 </div>
             </div>
 
             <div class="item carousel-item" style="background-image: url(image/2.png);">
                 <div class="container">
-                    <h1>Global Culinary Community:</h1>
-                    <p>Join a diverse network of food lovers from around the world. Share your favorite recipes,
+                    <div class="titile">Global Culinary Community:</div>
+                    <div class="content">Join a diverse network of food lovers from around the world. Share your favorite recipes,
                         discover new dishes, and connect with fellow enthusiasts who share your passion for great
-                        food.</p>
+                        food.</div>
                 </div>
             </div>
 
             <div class="item carousel-item" style="background-image: url(image/3.png);">
                 <div class="container">
-                    <h1>Ingredient Exchange:</h1>
-                    <p>Find and swap unique ingredients with community members. Whether you’re looking for rare
-                        spices or fresh local produce, our platform facilitates easy and efficient exchanges.</p>
+                    <div class="titile">Ingredient Exchange:</div>
+                    <div class="content">Find and swap unique ingredients with community members. Whether you’re looking for rare
+                        spices or fresh local produce, our platform facilitates easy and efficient exchanges.</div>
                 </div>
             </div>
 
             <div class="item carousel-item" style="background-image: url(image/4.jpg);">
                 <div class="container">
-                    <h1>Sustainable Practices:</h1>
-                    <p>Join us in promoting sustainability in the culinary world. FoodExchange encourages
+                    <div class="titile">Sustainable Practices:</div>
+                    <div class="content">Join us in promoting sustainability in the culinary world. FoodExchange encourages
                         responsible sourcing and minimal food waste through community initiatives and educational
-                        resources.</p>
+                        resources.</div>
                 </div>
             </div>
         </div>
