--- a/test.html
+++ b/test.html
@@ -4,57 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start; /* 调整为顶部对齐 */
+            background-image: url("/image/background.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
             height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
-            padding-top: 100px; /* 调整顶部间距 */
-        }
-        .search-box {
-            display: flex;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            width: 500px;
-            height: 50px;
-            overflow: hidden;
-        }
-        .search-input {
-            border: none;
-            outline: none;
-            padding: 0 15px;
-            flex: 1;
-            font-size: 18px;
-        }
-        .search-button {
-            background-color: #e0e0e0;
-            border: none;
-            outline: none;
-            padding: 0 15px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .search-button span {
-            font-size: 24px;
-            color: #007bff;
         }
     </style>
 </head>
 <body>
-
-<button type="button" class="btn btn-default" aria-label="Left Align">
-    <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
-</button>
-
-<button type="button" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
-</button>
-
 </body>
 </html>
