--- a/header.html
+++ b/header.html
@@ -1,5 +1,14 @@
-
-<nav class="navbar navbar-default">
+<style>
+    body {
+        background-image: url("/image/background.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        height: 100vh;
+        margin: 0;
+    }
+</style>
+<nav class="navbar navbar-default" style="margin: 0">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -13,19 +22,43 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="font-size: large">
             <ul class="nav navbar-nav" >
                 <li><a href="首页.html" >Home</a></li>
-                <li><a href="笔记展示.html" >Notes</a></li>
+                <li><a href="所有笔记.html" >Notes</a></li>
                 <li><a href="搜索.html" >Search</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="登录.html" >login</a></li>
+                <li><a href="登录.html" id="login-in">login in</a></li>
+                <li><a href="" id="login-out" onclick="loginOut(); return false;">login out</a></li>
                 <li><a href="发布.html" >Publish</a></li>
             </ul>
             <form class="navbar-form navbar-right">
-                <div class="form-group", id="searchField">
-                    <input type="text" class="form-control " placeholder="Search">
+                <div class="form-group" id="searchField">
+                    <input type="text" class="form-control " placeholder="Search" id="detail">
                 </div>
-                <button type="submit" class="btn btn-default ">Submit</button>
+                <button type="submit" class="btn btn-default " id>Submit</button>
             </form>
         </div>
     </div>
 </nav>
+
+<script>
+    $(document).ready(function(){
+        addEventListener("submit",function(event){
+            event.preventDefault();
+            const detail=document.getElementById("detail").value;
+            //跳转页面
+            window.location.href=`搜索.html?detail=${detail}`;
+            //console.error('deatil');
+        });
+        if(localStorage.getItem('token')){
+            $("#login-in").hide();
+            $("#login-out").show();
+        }else{
+            $("#login-in").show();
+            $("#login-out").hide();
+        }
+    });
+    function loginOut() {
+        localStorage.removeItem('token');
+        window.location.href=`登录.html`;
+    }
+</script>
