--- a/发布.html
+++ b/发布.html
@@ -6,46 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Post</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/post.css">
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Brand</a>
-                </div>
+    <div id="header-placeholder"></div>
 
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="首页.html">首页<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">笔记</a></li>
-                        <li><a href="#">搜索</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="注册.html">用户</a></li>
-                        <li class="active"><a href="#">发布</a></li>
-                    </ul>
-                    <form class="navbar-form navbar-right">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <div class="container mt-5">
-        <h2>Create a New Post</h2>
+    <div class="post mt-5">
+        <h1 style="font-weight: bolder">Create a New Post</h1>
         <form id="post-form">
             <div class="form-group">
                 <label for="post-title">Title</label>
@@ -53,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label for="post-content">Content</label>
-                <textarea class="form-control" id="post-content" rows="5" required></textarea>
+                <textarea class="form-control" id="post-content" rows="15" required></textarea>
             </div>
             <div class="form-group">
                 <label for="post-image">Image</label>
@@ -64,41 +32,17 @@
         <div id="message" class="mt-3"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="axios/axios.min.js"></script>
     <script>
-        document.getElementById('post-form').addEventListener('submit', function (event) {
-            event.preventDefault();
-
-            if (!checkLoginStatus()) {
-                window.location.href = '登录.html';  // 跳转到登录页面
-                return;
-            }
-
-            const formData = new FormData();
-            formData.append('title', document.getElementById('post-title').value);
-            formData.append('content', document.getElementById('post-content').value);
-            formData.append('image', document.getElementById('post-image').files[0]);
-
-            axios.post('http://localhost:3000/api/posts', formData, {
-                headers: {
-                    'Content-Type': 'multipart/form-data'
-                }
-            })
-                .then(response => {
-                    document.getElementById('message').innerText = 'Post submitted successfully!';
-                    document.getElementById('post-form').reset();
-                })
-                .catch(error => {
-                    console.error('Error submitting post:', error);
-                    document.getElementById('message').innerText = 'Error submitting post.';
-                });
+        $(document).ready(function(){
+            $("#header-placeholder").load("header.html");
+            let token = localStorage.getItem('token');
+            axios.defaults.headers.common['token'] = token;
         });
     </script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/post.js"></script>
 </body>
 
 </html>
