--- a/登录.html
+++ b/登录.html
@@ -23,21 +23,9 @@
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" autocomplete="current-password">
             </div>
-            <div class="form-group" id="emailCodeField">
-                <label for="exampleInputEmailCode">Email Code</label>
-
-                <div class="input-group">
-                    <div class="col-lg-7 " style="padding-left: 0px;">
-                        <input type="text" class="form-control" id="exampleInputEmailCode" placeholder="Email Code">
-                    </div>
-                    <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" id="sendEmailCode">Get Email Code</button>
-                </span>
-                </div>
-            </div>
-            <div class="checkbox">
-                <a href="注册.html" class="forgot-password">Register?</a>
-                <a href="忘记密码.html" class="forgot-password">Forgot Password?</a>
+            <div class="checkbox" style="display: flex;">
+                <a href="注册.html" class="forgot-password" style="color: #ffc07f">Register?</a>
+                <a href="忘记密码.html" class="forgot-password" style="margin-left: auto; color: #ffc07f">Forgot Password?</a>
             </div>
             <button type="submit" class="btn btn-primary btn-block">login</button>
         </form>
